# ContentAutomation

./: .env.example  .gitignore  .replit  README.md  config.py  main.py  pyproject.toml  replit.md  requirements.txt  scheduler.py
.github/workflows/: content-automation-schedule.yml  content-ideas.yml  main.yml
audit/: site_audit.json  summary.md
backlog/: content_backlog.csv
dashboard/: index.html
docs/: IMPLEMENTATION.md
widgets/playbooks/: index.html  playbooks.json
widgets/tools/: index.html  tools.json
workers/: affiliate_enricher.py  content_backlog_generator.py  idea_generator.py  metrics_logger.py  news_summarizer.py  site_auditor.py  wp_publish.py
